--- a/config.toml
+++ b/config.toml
@@ -51,7 +51,7 @@ googleAnalytics = "UA-XXXXXXX-Y"
         [[params.skills.list]]
         title = "Well-Organized and Kept"
         [[params.skills.list]]
-        title = "Works well with teams and alone"
+        title = "Works well alone and in teams"
 
 
     [params.education]
